adds styling and font

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -34,5 +34,220 @@
   }
   to {
     transform: rotate(360deg);
+  }
+} */
+
+/* Font */
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+* {
+  margin: 0;
+  font-family: Montserrat;
+  color: white;
+}
+
+body {
+  background-color: #222;
+  margin-bottom: 10px;
+}
+
+/* Code for making sure no content gets covered due to the sticky header when jumping to another part of the page */
+html {
+  scroll-padding-top: 49px;
+}
+
+/* Navbar CSS */
+/* -------------------------------------- */
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 5;
+  border-bottom: 5px solid rgb(58, 58, 58);
+}
+
+nav {
+  background-color: rgba(131,58,180,1);
+  letter-spacing: 1px;
+  list-style: none;
+  text-align: center;
+}
+
+.link-button {
+  border-bottom: 5px solid rgba(131,58,180,1);
+  padding-top: 10px;
+  padding-bottom: 5px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: inline-block;
+  width: 22%;
+}
+
+.link-button:hover {
+  border-bottom: 5px solid #00B285;
+  color: #00B285;
+  background-color: rgba(131,58,180,1);
+}
+/* -------------------------------------- */
+
+main {
+  padding-top: 50px;
+}
+
+h1 {
+  text-align: center;
+  font-size: 50px;
+  letter-spacing: 20px;
+  position: relative;
+  z-index: 3;
+}
+
+.square {
+  background-color: rgba(131,58,180,1);
+  height: 90px;
+  width: 170px;
+  position: relative;
+  z-index: 2;
+  bottom: 80px;
+  left: 40px;
+  box-shadow: 30px -40px #00B285;
+}
+
+.text {
+  position: relative;
+  bottom: 70px;
+  margin-left: 5%;
+}
+
+.margin {
+  position: relative;
+  bottom: 70px;
+  margin-left: 5%;
+}
+
+.button {
+  position: relative;
+  bottom: 70px;
+  margin-left: 5%;
+}
+
+.bold {
+  font-weight: bold;
+  color: #00B285;
+}
+
+h2 {
+  font-weight: bold;
+  color: #00B285;
+}
+
+section {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.external-button {
+  border-bottom: 5px solid rgba(131,58,180,1);
+  padding: 15px 27px 10px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: inline-block;
+}
+
+.external-button:hover {
+  background-color: rgba(131,58,180,1);
+}
+
+article {
+  background-color: rgb(58, 58, 58);
+  text-align: center;
+  margin-top: 5px;
+}
+
+img {
+  max-width: 95%;
+}
+
+h3 {
+  font-weight: bold;
+  color: #00B285;
+}
+/* -------------------------------------- */
+
+@media (min-width: 576px) {
+  .link-button {
+      padding: 15px 27px 10px;
+      width: auto;
+  }
+
+  h1 {
+      font-size: 150px;
+      letter-spacing: 55px;
+      font-weight: 500;
+      position: relative;
+      z-index: 3;
+  }
+  
+  .square {
+      height: 150px;
+      width: 510px;
+      position: relative;
+      left: 130px;
+      bottom: 110px;
+      z-index: 2;
+      box-shadow: 200px -50px #00B285;
+  }
+  
+  .text {
+      position: relative;
+      bottom: 90px;
+      margin-left: 200px;
+      margin-right: 200px;
+  }
+  
+  .margin {
+      position: relative;
+      bottom: 90px;
+      margin-left: 200px;
+  }
+  
+  .button {
+      position: relative;
+      bottom: 90px;
+  }
+
+  h2 {
+      font-size: 50px;
+  }
+  
+  p {
+      font-size: 25px;
+  }
+  
+  section {
+      margin-left: 200px;
+      margin-right: 200px;
+  }
+  
+  article {
+      padding: 10px;
+  }
+
+  h3 {
+      font-size: 35px;
+  }
+}
+
+@media (max-width: 398px) {
+  html {
+      scroll-padding-top: 100px;
   }
 }
